white space bug

--- a/styles.css
+++ b/styles.css
@@ -978,7 +978,6 @@ body {
 
 html, body {
     overflow-x: hidden;
-    max-width: 100vw;
-    max-height: 100dvh;
-    position: relative;
+    width: 100%;
+    scroll-behavior: smooth;
 }
